train and predict

--- a/notebooks/1.0_initial_train_and_test.ipynb
+++ b/notebooks/1.0_initial_train_and_test.ipynb
@@ -143,8 +143,7 @@
     "id": "5oqrWaH_EbvI"
    },
    "source": [
-    "## Selecting the model\n",
-    "For the example purpose we select as model checkpoint the smallest transformer in T5 family - `t5_small`. Other pre-trained models can be found [here](https://huggingface.co/docs/transformers/model_doc/t5#:~:text=T5%20comes%20in%20different%20sizes%3A)."
+    "## Selecting the model"
    ]
   },
   {
